sass: silence deprecation warnings for minima theme imports
- quiet_deps: suppress warnings from dependencies (minima theme)
- silence @import deprecation: migration to @use/@forward requires
  significant minima refactoring (tracked: https://sass-lang.com/d/import)

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,13 @@ author: "Bitcoin Optech"  ## Default author name for blog posts
 # Build settings
 markdown: kramdown
 theme: minima
+sass:
+  # quiet_deps silences warnings from dependencies loaded via sass_dir
+  quiet_deps: true
+  # Silence @import deprecation warnings - migration to @use/@forward requires
+  # significant refactoring of minima theme. Track: https://sass-lang.com/d/import
+  silence_deprecations:
+    - import
 plugins:
   - jekyll-feed
   - jekyll-redirect-from
